added copyright and reformatted according to standard open source formatting

--- a/pom.xml
+++ b/pom.xml
@@ -1,51 +1,58 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>atlassian-public-pom</artifactId>
-		<groupId>com.atlassian.pom</groupId>
-		<version>15</version>
-	</parent>
-	<groupId>com.atlassian.util.concurrent</groupId>
-	<artifactId>atlassian-util-concurrent</artifactId>
-	<name>Atlassian Concurrency Utilities</name>
-	<version>0.0.1-SNAPSHOT</version>
-	<description />
-	<properties>
-		<jdkLevel>1.5</jdkLevel>
-	</properties>
-	<distributionManagement>
-		<site>
-			<id>atlassian-documentation</id>
-			<url>
-				dav:https://docs.atlassian.com/atlassian-util-concurrent/${project.version}/ 
-			</url>
-		</site>
-	</distributionManagement>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.4</version>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>retrotranslator-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>translate-project</goal>
-						</goals>
-						<configuration>
-							<classifier>jdk14</classifier>
-							<attach>true</attach>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+<?xml version="1.0" encoding="UTF-8"?><project>
+  <parent>
+    <artifactId>atlassian-public-pom</artifactId>
+    <groupId>com.atlassian.pom</groupId>
+    <version>15</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.atlassian.util.concurrent</groupId>
+  <artifactId>atlassian-util-concurrent</artifactId>
+  <name>Atlassian Concurrency Utilities</name>
+  <version>0.0.1-SNAPSHOT</version>
+  <description></description>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>retrotranslator-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>translate-project</goal>
+            </goals>
+            <configuration>
+              <classifier>jdk14</classifier>
+              <attach>true</attach>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.4</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.4</version>
+    </dependency>
+  </dependencies>
+  <distributionManagement>
+    <site>
+      <id>atlassian-documentation</id>
+      <url>dav:https://docs.atlassian.com/atlassian-util-concurrent/${project.version}/</url>
+    </site>
+  </distributionManagement>
+  <properties>
+    <jdkLevel>1.5</jdkLevel>
+  </properties>
 </project>
