--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
       <artifactId>commons-io</artifactId>
       <version>1.4</version>
     </dependency>
+    <dependency>
+      <groupId>net.jcip</groupId>
+      <artifactId>jcip-annotations</artifactId>
+      <version>1.0</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <site>
