Updating POM with correct metadata

--- a/pom.xml
+++ b/pom.xml
@@ -1,63 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?><project>
-  <parent>
-    <artifactId>atlassian-public-pom</artifactId>
-    <groupId>com.atlassian.pom</groupId>
-    <version>16</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.atlassian.util.concurrent</groupId>
-  <artifactId>atlassian-util-concurrent</artifactId>
-  <name>Atlassian Concurrency Utilities</name>
-  <version>0.0.1-SNAPSHOT</version>
-  <description></description>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>retrotranslator-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>translate-project</goal>
-            </goals>
-            <configuration>
-              <classifier>jdk14</classifier>
-              <attach>true</attach>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.4</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.4</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>net.jcip</groupId>
-      <artifactId>jcip-annotations</artifactId>
-      <version>1.0</version>
-    </dependency>
-  </dependencies>
-  <distributionManagement>
-    <site>
-      <id>atlassian-documentation</id>
-      <url>dav:https://docs.atlassian.com/atlassian-util-concurrent/${project.version}/</url>
-    </site>
-  </distributionManagement>
-  <properties>
-    <jdkLevel>1.5</jdkLevel>
-  </properties>
+    <parent>
+        <artifactId>atlassian-public-pom</artifactId>
+        <groupId>com.atlassian.pom</groupId>
+        <version>16</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.atlassian.util.concurrent</groupId>
+    <artifactId>atlassian-util-concurrent</artifactId>
+    <name>Atlassian Concurrency Utilities</name>
+    <version>0.0.1-SNAPSHOT</version>
+    <description></description>
+    <scm>
+        <connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</connection>
+        <developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</developerConnection>
+        <url>https://labs.atlassian.com/svn/CONCURRENT/trunk</url>
+    </scm>
+    <licenses>
+        <license>
+            <name>Apache 2</name>
+            <distribution>repo</distribution>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>retrotranslator-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>translate-project</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>jdk14</classifier>
+                            <attach>true</attach>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>net.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
+    <distributionManagement>
+        <site>
+            <id>atlassian-documentation</id>
+            <url>dav:https://docs.atlassian.com/atlassian-util-concurrent/${project.version}/</url>
+        </site>
+    </distributionManagement>
+    <properties>
+        <jdkLevel>1.5</jdkLevel>
+    </properties>
 </project>
