--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,19 @@
     <parent>
         <artifactId>atlassian-public-pom</artifactId>
         <groupId>com.atlassian.pom</groupId>
-        <version>18</version>
+        <version>17</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.atlassian.util.concurrent</groupId>
     <artifactId>atlassian-util-concurrent</artifactId>
     <name>Atlassian Concurrency Utilities</name>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.3</version>
     <description>This project contains utility classes that are used by various products and projects inside Atlassian and may have some utility to the world at large.</description>
 	<url>https://labs.atlassian.com/wiki/display/CONCURRENT/Home</url>
     <scm>
-        <connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</connection>
-        <developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</developerConnection>
-        <url>https://labs.atlassian.com/svn/CONCURRENT/trunk</url>
+        <connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.3</connection>
+        <developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.3</developerConnection>
+        <url>https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.3</url>
     </scm>
     <licenses>
         <license>
