--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
     <groupId>com.atlassian.util.concurrent</groupId>
     <artifactId>atlassian-util-concurrent</artifactId>
     <name>Atlassian Concurrency Utilities</name>
-    <version>0.0.4</version>
+    <version>0.0.5-SNAPSHOT</version>
     <description>This project contains utility classes that are used by various products and projects inside Atlassian and may have some utility to the world at large.</description>
 	<url>https://labs.atlassian.com/wiki/display/CONCURRENT/Home</url>
     <scm>
-        <connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.4</connection>
-        <developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.4</developerConnection>
-        <url>https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.4</url>
+        <connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</connection>
+        <developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</developerConnection>
+        <url>https://labs.atlassian.com/svn/CONCURRENT/trunk</url>
     </scm>
     <licenses>
         <license>
