--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>atlassian-public-pom</artifactId>
 		<groupId>com.atlassian.pom</groupId>
@@ -10,7 +9,7 @@
 	<groupId>com.atlassian.util.concurrent</groupId>
 	<artifactId>atlassian-util-concurrent</artifactId>
 	<name>Atlassian Concurrency Utilities</name>
-	<version>0.0.8-SNAPSHOT</version>
+	<version>0.0.8</version>
 	<description>This project contains utility classes that are used by
 		various products and projects inside Atlassian and may have some
 		utility to the world at large.</description>
@@ -26,9 +25,9 @@
 		</developer>
 	</developers>
 	<scm>
-		<connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</connection>
-		<developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</developerConnection>
-		<url>https://labs.atlassian.com/svn/CONCURRENT/trunk</url>
+		<connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.8</connection>
+		<developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.8</developerConnection>
+		<url>https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.8</url>
 	</scm>
 	<licenses>
 		<license>
