--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,25 @@
 	<groupId>com.atlassian.util.concurrent</groupId>
 	<artifactId>atlassian-util-concurrent</artifactId>
 	<name>Atlassian Concurrency Utilities</name>
-	<version>0.0.8-SNAPSHOT</version>
+	<version>0.0.8</version>
 	<description>This project contains utility classes that are used by
 		various products and projects inside Atlassian and may have some
 		utility to the world at large.</description>
-	<url>https://labs.atlassian.com/wiki/display/CONCURRENT/Home</url>
+	<url>https://labs.atlassian.com/wiki/display/CONCURRENT/Home</url>	
+	<issueManagement>
+		<system>JIRA</system>
+		<url>http://labs.atlassian.com/browse/CONCURRENT</url>
+	</issueManagement>
+	<developers>
+		<developer>
+			<name>Jed Wesley-Smith</name>
+			<email>jed@atlassian.com</email>
+		</developer>
+	</developers>
 	<scm>
-		<connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</connection>
-		<developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</developerConnection>
-		<url>https://labs.atlassian.com/svn/CONCURRENT/trunk</url>
+		<connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.8</connection>
+		<developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.8</developerConnection>
+		<url>https://labs.atlassian.com/svn/CONCURRENT/tags/atlassian-util-concurrent-0.0.8</url>
 	</scm>
 	<licenses>
 		<license>
@@ -74,6 +84,7 @@
 			<groupId>net.jcip</groupId>
 			<artifactId>jcip-annotations</artifactId>
 			<version>1.0</version>
+			<optional>true</optional>
 		</dependency>
 
 		<!-- Test dependencies -->
@@ -81,7 +92,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.6</version>
-			<scope>provided</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -99,11 +110,13 @@
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>annotations</artifactId>
 			<version>1.3.8</version>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
 			<version>1.3.8</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
