--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
 			<version>1.0</version>
 			<optional>true</optional>
 		</dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>r07</version>
+            <scope>provided</scope>
+        </dependency>
 
 		<!-- Test dependencies -->
 		<dependency>
