CONCURRENT-20 adding a timeout capability to AsyncCompleter

--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,8 @@
 						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
 					</archive> 
 				</configuration>
-			</plugin>  
-			<plugin>   
+			</plugin>
+			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<version>2.0.1</version>
@@ -84,12 +84,23 @@
 					<execution>
 						<id>bundle-manifest</id>
 						<phase>process-classes</phase>
-						<goals>    
+						<goals>
 							<goal>manifest</goal>
-						</goals>   
+						</goals>
 					</execution>
 				</executions>
-			</plugin>
+                <configuration>
+                    <instructions>
+                        <Export-Package>
+                            com.atlassian.util.concurrent.*;version="${project.version}"
+                        </Export-Package>
+                        <Import-Package>
+                            com.google.common.*,
+                            net.jcip.annotations
+                        </Import-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 	<reporting>
