--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 		</developer>
 	</developers>
 	<scm>
-		<connection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</connection>
-		<developerConnection>scm:svn:https://labs.atlassian.com/svn/CONCURRENT/trunk</developerConnection>
-		<url>https://labs.atlassian.com/svn/CONCURRENT/trunk</url>
+		<connection>scm:git:hg@bitbucket.org:atlassian/atlassian-util-concurrent.git</connection>
+		<developerConnection>scm:git:hg@bitbucket.org:atlassian/atlassian-util-concurrent.git</developerConnection>
+		<url>https://bitbucket.org/atlassian/atlassian-util-concurrent</url>
 	</scm>
 	<licenses>
 		<license>
