--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.guava-osgi</groupId>
-            <artifactId>guava-osgi</artifactId>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
             <version>${guava.osgi.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -159,7 +159,7 @@
         </site>
     </distributionManagement>
     <properties>
-        <jdkLevel>1.5</jdkLevel>
-        <guava.osgi.version>10.0.1</guava.osgi.version>
+        <jdkLevel>1.6</jdkLevel>
+        <guava.osgi.version>14.0</guava.osgi.version>
     </properties>
 </project>
