--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
     <distributionManagement>
         <site>
             <id>atlassian-documentation</id>
-            <url>dav:https://docs.atlassian.com/atlassian-util-concurrent/${project.version}/</url>
+            <url>scpexe://docs-app.internal.atlassian.com/var/www/domains/docs.atlassian.com/${project.artifactId}/${project.version}</url>
         </site>
     </distributionManagement>
     <properties>
