--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.atlassian.util.concurrent</groupId>
     <artifactId>atlassian-util-concurrent</artifactId>
     <name>Atlassian Concurrency Utilities</name>
-    <version>3.0.1-SNAPSHOT</version>
+    <version>2.6.1-SNAPSHOT</version>
     <description>This project contains utility classes that are used by
 		various products and projects inside Atlassian and may have some
 		utility to the world at large.</description>
@@ -161,6 +161,7 @@
     </distributionManagement>
     -->
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdkLevel>1.6</jdkLevel>
         <guava.osgi.version>10.0.1</guava.osgi.version>
     </properties>
