--- a/pom.xml
+++ b/pom.xml
@@ -142,13 +142,15 @@
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>annotations</artifactId>
-            <version>1.3.8</version>
+            <version>3.0.0</version>
+            <scope>provided</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
-            <version>1.3.8</version>
+            <version>3.0.0</version>
+            <scope>provided</scope>
             <optional>true</optional>
         </dependency>
     </dependencies>
