--- a/security-assistant.yml
+++ b/security-assistant.yml
@@ -1,5 +1,6 @@
-#This file was generated automatically from a template as part of RAID's security uplift work.
-#More details can be found here: https://hello.atlassian.net/wiki/spaces/~mmarzecki/pages/967512223/Security+uplift+-+next+steps
-
 owner: mmarzecki@atlassian.com
-file-sourceclear-tickets: true
+lowerSeverityPaths:
+  - path: src/test/**
+      reasoning: "This is a test directory"
+
+fileSnykTicketsWithFutureSLODates: true
